--- a/index.html
+++ b/index.html
@@ -386,6 +386,71 @@
 								<p>
 									July 20, 2021
 								</p>
+								<p>
+									As you may have figured out by now, I’m a nerd. A nerd who is passionate about space. More specifically: 
+									extragalactic astronomy. What is extragalactic astronomy, you say? Well, I’m glad you asked! 
+									Extragalactic astronomy is the study of galaxies outside of our home galaxy, the Milky Way. I 
+									spent most of my higher education studying galaxies, and I am here to share the love! 
+								</p>
+								<p>
+									A very important and often overlooked part of education is visualization. Luckily for me, up until 2016 
+									all astronomical observations were taken of photons—those little particles that fly around and 
+									give us light and the ability to see. So astronomy is a very visual field. But you know what I 
+									haven’t found to be very visual? History. I had never really learned much about the history 
+									science or astronomy in school, but as I learned more on my own, I found it really interesting 
+									and it’s something that I wanted to share with my students. 
+								</p>
+								<p>
+									As I thought about writing this blog, I thought of how I could incorporate history into it. History of 
+									astronomy? No, too broad. History of the Solar System? A little better, but not quite what I 
+									was looking for. Finally, I settled on the area in which my expertise resides: extragalactic 
+									astronomy. Even within this small subfield of astronomy there is a lot of interesting history 
+									(and drama)! 
+								</p>
+								<p>
+									Of course, I could just tell you all about the discovery of galaxies—but that would be no fun. Instead, 
+									I created an interactive timeline to help you see what happened throughout this history. As a 
+									child (and even now) I had a hard time memorizing dates for history class. The great thing about 
+									this timeline is that it allows you to swipe through each event and see when they happened with 
+									respect to each other. This allows you to physically see what came first without the added step 
+									of remembering dates. 
+								</p>
+								<p>
+									Additionally, I tried to find images to represent both the people and their findings. I find that I 
+									often remember things better when I have a picture associated with them. I can’t speak for 
+									anyone else, but I find that after reading a big block of text with no pictures, I end up 
+									retaining none of what I read. On the other hand, when pictures and visuals are involved, my brain 
+									has something to reference and has a better time retaining the information. I chose these particular 
+									images for this timeline because it is interesting for me to see what telescopes these people worked 
+									on, what their original drawings looked like, or even what clothes they were wearing. It really 
+									immerses you in the history and helps you recognize what the time period was like, what tools they 
+									had at their disposal, and how quickly advancement happened.
+								</p>
+								<p>
+									I find that this visual timeline helps to draw focus to past errors in scientific thought and how much 
+									progress we have made. As someone who has participated in modern extragalactic research, it begs the 
+									question: what errors in thought exist today? Once again, a question I am not able to answer—and 
+									perhaps no one will be able to in our lifetime. This particular way that I have displayed the history 
+									of galaxy discovery really encourages critical thinking and retrospection. 
+								</p>
+								<p>
+									Lastly, I find that this way of presenting information is more accessible. It contains an interactive 
+									portion with the swiping, a visual portion with the images, dates for people who remember numbers well, 
+									and text for people who enjoy reading. It caters to a larger group of people. Scientific papers are 
+									very verbose, full of jargon, and void of images. If the scientific community shifted to a more visual 
+									way of communicating their findings, they would most likely reach a broader audience and have a higher 
+									impact. On the other hand, most textbooks are created for college level students. If textbooks 
+									presented their information in a more creative way, it would undoubtedly change education in a 
+									positive way and become more accessible for a younger audience. So my challenge to any scientists, 
+									textbook writers, or teachers out there: how can you make your information more accessible?
+								</p>
+								<p>
+									I think that creating this timeline was very challenging but also quite fun. Had history been presented 
+									this way when I was in school, I may have paid a bit more attention. I can only hope that my students 
+									will feel the same way. Either way, I know that I will be creating more visuals in the future in an 
+									effort to make scientific reading accessible.
+								</p>
+
 							
 								<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1QKQK7TViPTnz-x09tXKeKqFLAwPSpGNhM7fdREqWAkk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 	
