--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
 									Extragalactic astronomy is the study of galaxies outside of our home galaxy, the Milky Way. I 
 									spent most of my higher education studying galaxies, and I am here to share the love! 
 								</p>
+								<img src="images/Whirlpool-Galaxy-NGC-5195-Sc.jpg" style="max-width:100%; height:auto;">
 								<p>
 									A very important and often overlooked part of education is visualization. Luckily for me, up until 2016 
 									all astronomical observations were taken of photons—those little particles that fly around and 
@@ -400,6 +401,7 @@
 									science or astronomy in school, but as I learned more on my own, I found it really interesting 
 									and it’s something that I wanted to share with my students. 
 								</p>
+								<img src="images/fbdabet.jpg" style="max-width:100%; height:auto;">
 								<p>
 									As I thought about writing this blog, I thought of how I could incorporate history into it. History of 
 									astronomy? No, too broad. History of the Solar System? A little better, but not quite what I 
@@ -407,6 +409,7 @@
 									astronomy. Even within this small subfield of astronomy there is a lot of interesting history 
 									(and drama)! 
 								</p>
+								<img src="images/9847865078dbe3f3ff0cc898ca73792b.jpg" style="max-width:100%; height:auto;">
 								<p>
 									Of course, I could just tell you all about the discovery of galaxies—but that would be no fun. Instead, 
 									I created an interactive timeline to help you see what happened throughout this history. As a 
@@ -444,6 +447,7 @@
 									positive way and become more accessible for a younger audience. So my challenge to any scientists, 
 									textbook writers, or teachers out there: how can you make your information more accessible?
 								</p>
+								<img src="images/meta-science-blog.jpg" style="max-width:100%; height:auto;">
 								<p>
 									I think that creating this timeline was very challenging but also quite fun. Had history been presented 
 									this way when I was in school, I may have paid a bit more attention. I can only hope that my students 
