--- a/index.html
+++ b/index.html
@@ -495,6 +495,18 @@
 							<p>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/3sFkqIGFjps" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
 							</p>
+							<p>
+							For my second text, I chose <a href="https://www.iau.org/public/themes/astronomy_in_everyday_life/">‘Astronomy in Everyday Life’</a> from the International Astronomical Union Website. This article describes technology created for astronomy that has been adapted to different sectors, such as industry, aerospace, energy, and medicine. While the last resource described a more subjective way to view astronomy, this article showcases some of the objective benefits and practical uses of astronomy. 
+							</p>
+							<p>
+							This text is a bit more complex, so I would probably recommend it for a college age student as is. With modification, some of the information would be good for high schoolers as well. This resource is interesting because it is relatable to any students entering these sectors after school.
+							</p>
+							<p>
+							Here are some vocabulary that would be ideal to know before reading this article: sector, technology, development, tangible, pursue, software
+							</p>
+							<p>
+							A question to consider while reading: which of these technologies have you used, and which of these technologies have you benefitted from either directly or indirectly?
+							</p>
 							
 						</article>
 						<article id="blog">
