--- a/index.html
+++ b/index.html
@@ -507,6 +507,19 @@
 							<p>
 							A question to consider while reading: which of these technologies have you used, and which of these technologies have you benefitted from either directly or indirectly?
 							</p>
+							<p>
+							For my third text, I chose a <a href="https://www.travelandleisure.com/trip-ideas/space-astronomy/nasa-inventions?">Travel and Leisure</a> article. This article focuses more on NASA inventions that have improved our life on Earth, even though that wasn’t the initial intended purpose. The technologies they list vary from ear thermometers to hurricane tracking! 
+							</p>
+							<p>
+							This text is more simple and is supplemented with visuals, so I would say it is a good read for middle of high school students. This text really displays these technologies in a simple way that is enjoyable to read.
+							</p>
+							<p>
+							Here are some vocabulary that would be ideal to know before reading this article: communications, monitoring, aural, fibrous, algae, grooves, nutrition
+							</p>
+							<p>
+							A question to consider while reading: Which of these technologies are you surprised are on the list?
+							</p>
+
 							
 						</article>
 						<article id="blog">
