add headings to blog 4

--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
 							<p>
 							In general, I think it is important for students to know their subject matter and *why* they are learning it. In one of my college astronomy courses, I learned about some of the common modern technology that exists because of astronomy. I thought this concept was amazing and relevant society today, so I decided to share with you (and with my future students). 
 							</p>
+							<h5 class="major">Text 1</h5>
 							<p>
 							My first resource is this video by Paul M. Sutter. In this video, Sutter describes astronomy from the perspective of humanity. He explains that while a bunch of sciences are directly helpful to humanity in the sense of medicine and technology, astronomy provides enrichment. Sutter goes on to say that astronomy was one of the four original liberating arts. I like that Sutter takes this approach to explaining astronomy, because something doesn’t need to be life changing to be considered important. Having worked at two planetariums, I can confirm that many people enjoy learning about space and astronomy and all of the patterns of the universe. People find it enriching, and that alone makes it important. 
 							</p>
@@ -495,6 +496,7 @@
 							<p>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/3sFkqIGFjps" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
 							</p>
+							<h5 class="major">Text 2</h5>
 							<p>
 							For my second text, I chose <a href="https://www.iau.org/public/themes/astronomy_in_everyday_life/">‘Astronomy in Everyday Life’</a> from the International Astronomical Union Website. This article describes technology created for astronomy that has been adapted to different sectors, such as industry, aerospace, energy, and medicine. While the last resource described a more subjective way to view astronomy, this article showcases some of the objective benefits and practical uses of astronomy. 
 							</p>
@@ -507,6 +509,7 @@
 							<p>
 							A question to consider while reading: which of these technologies have you used, and which of these technologies have you benefitted from either directly or indirectly?
 							</p>
+							<h5 class="major">Text 3</h5>
 							<p>
 							For my third text, I chose a <a href="https://www.travelandleisure.com/trip-ideas/space-astronomy/nasa-inventions?">Travel and Leisure</a> article. This article focuses more on NASA inventions that have improved our life on Earth, even though that wasn’t the initial intended purpose. The technologies they list vary from ear thermometers to hurricane tracking! 
 							</p>
