--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									your image is.
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/7E1A1825-1bw.jpg" style="width:350px; height:280px;  object-fit: cover;">
+								<img src="images/sarah_with_galaxy.jpg" style="width:350px; height:280px;  object-fit: cover;">
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
