--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
-								
+								<p>
+									Theater Presenter and Developer
+								<br>
+									Adler Planetarium
+								</p>
 								<p>
 									Master of Science, Physics and Astronomy
 								<br>
