adding portfolio section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 								<li>
 									<a href="#blog" >Blog</a>
 								</li>
+								<li>
+									<a href="#portfolio" >Portfolio</a>
+								</li>
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
 								-->
@@ -573,6 +576,13 @@
 							<p>
 							Blog 4: <a href="https://sarahparkerastro.com/#blog4">Disciplinary Text Set</a>
 							</p>
+						</article>
+						<article id="portfolio">
+							<h2 class="major">Planetarian Portfolio</h2>
+							<!-- Here is an image that you can customize for this page -->
+							<span class="image main">
+								<img src="images/kitt_peak_2.jpg"  style="object-fit: cover;">
+							</span>
 						</article>
 
 					</div>
