--- a/index.html
+++ b/index.html
@@ -579,10 +579,9 @@
 						</article>
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
-							<!-- Here is an image that you can customize for this page -->
-							<span class="image main">
-								<img src="images/kitt_peak_2.jpg"  style="object-fit: cover;">
-							</span>
+							<p>
+								Pardon the dust! This page is under construction.
+							</p>
 						</article>
 
 					</div>
