--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 									a short line about yourself.
 								-->
 								<p>
-									Theater Presenter and Developer
+									Planetarium Educator
 								<br>
-									Adler Planetarium
+									Horwitz-DeRemer Planetarium
 								</p>
 								<p>
 									Master of Science, Physics and Astronomy
@@ -123,7 +123,7 @@
 							</p>
 							<p>
 								<b>Research Interests:</b>
-								Extragalactic astronomy
+								Exoplanets, Extragalactic astronomy, Transients
 							</p>
 							<p>
 								<img src="images/MARAC.jpg" style="max-width:100%; height:auto;">
@@ -156,6 +156,11 @@
 								to the 0.8 m and 0.9 m telescopes. Sarah has also attended an ALFALFA undergraduate workshop at Green 
 								Bank Observatory.
 							</p>
+							<p>
+								Since graduating from Mizzou, Sarah has stayed active in the astronomical community by working at the 
+								Horwitz-DeRemer Planetarium, the Adler Planetarium, and volunteering at Geneva Lake Astrophysics and 
+								STEAM (GLAS).
+							</p>
 						</article>
 
 						<!-- Here is the "Research" card. -->
@@ -165,8 +170,11 @@
 								<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
 							</span>
 							<p>
-								<b>NOTE:</b> Sarah does not currently have any publications in peer-reviewed journals, but 
-								hopes to publish in the relatively near future. For now, please enjoy her research posters:
+								<b>NOTE:</b> Sarah currently has one publication in Astronomical Society of the Pacific Conference Series (ASPCS), 
+								but hopes to publish more in the near future. 
+							</p>
+							<p>
+								<b><a href="images/poster_new.pdf">Lenticular Galaxies in Different Environments - Isolated versus Group Environment</a></b>
 							</p>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
