--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 								but hopes to publish more in the near future. 
 							</p>
 							<p>
-								<b><a href="images/poster_new.pdf">Lenticular Galaxies in Different Environments - Isolated versus Group Environment</a></b>
+								<b><a href="images/533-0070.pdf">An Exposition on Globular Clusters: Theory and Observation</a></b>
 							</p>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
@@ -195,7 +195,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email: smpmfg@missouri.mail.edu</b> 
+								<b>Email: sarahparker2296@yahoo.com</b> 
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
