--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
 								Bank Observatory.
 							</p>
 							<p>
+								<img src="images/GLAS.jpeg" style="max-width:100%; height:auto;">
+							</p>
+							<p>
 								Since graduating from Mizzou, Sarah has stayed active in the astronomical community by working at the 
 								Horwitz-DeRemer Planetarium, the Adler Planetarium, and volunteering at Geneva Lake Astrophysics and 
 								STEAM (GLAS).
