--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/08062023CV.pdf" target="_blank">Résumé</a>
+									<a href="images/08062023CV.pdf" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
