--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
 									a short line about yourself.
 								-->
 								<p>
+									Quantum Outreach Program Manager
+								<br>
+									University of Wisconsin-Madison
+								</p>
+								<p>
 									Planetarium Educator
 								<br>
 									Horwitz-DeRemer Planetarium
