--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/08062023CV.pdf" target="_blank">Curriculum Vitae</a>
+									<a href="12172025CV.pdf" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
@@ -629,3 +629,4 @@
 
 	</body>
 </html>
+
