--- a/index.html
+++ b/index.html
@@ -596,6 +596,7 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 							<p>
+								<a href="path_to_file" download="proposed_file_name">Download</a>
 								Pardon the dust! This page is under construction.
 							</p>
 						</article>
@@ -629,4 +630,5 @@
 
 	</body>
 </html>
+
 
