--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							</p>
 							<p>
 								<b>Research Interests:</b>
-								Exoplanets, Extragalactic astronomy, Transients
+								Exoplanets, Extragalactic astronomy, Transients, Young Stellar Objects
 							</p>
 							<p>
 								<img src="images/MARAC.jpg" style="max-width:100%; height:auto;">
@@ -630,5 +630,6 @@
 
 	</body>
 </html>
+
 
 
