--- a/index.html
+++ b/index.html
@@ -596,8 +596,15 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 							<p>
-								<a href="path_to_file" download="proposed_file_name">Download</a>
-								Pardon the dust! This page is under construction.
+								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
+								Sarah began working in the planetarium industry in 2014 during her freshman year of college. 
+								Since then, she has worked at the Allen F. Blocher Planetarium in Stevens Point, WI, the 
+								Horwitz-DeRemer Planetarium in Waukesha, WI, the Adler Planetarium in Chicago, IL, and has 
+								volunteered at the Madison Metropolitan School District Planetarium in Madison, WI. On occasion, 
+								she has also volunteered with Geneva Lake Astrophysics and STEAM, running their portable dome for 
+								outreach events. In this time, Sarah has given many presentations and designed visuals with 
+								Digistar 6 software, which have been used at planetariums across the world. Please see samples 
+								of her work below.
 							</p>
 						</article>
 
@@ -630,6 +637,7 @@
 
 	</body>
 </html>
+
 
 
 
