--- a/index.html
+++ b/index.html
@@ -598,9 +598,10 @@
 							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
 								Sarah began working in the planetarium industry in 2014 during her freshman year of college. 
-								Since then, she has worked at the Allen F. Blocher Planetarium in Stevens Point, WI, the 
-								Horwitz-DeRemer Planetarium in Waukesha, WI, the Adler Planetarium in Chicago, IL, and has 
-								volunteered at the Madison Metropolitan School District Planetarium in Madison, WI. On occasion, 
+								Since then, she has worked at the <a href="https://www.uwsp.edu/smcpa/school-of-mathematics-computing-physics-and-astronomy/blocher-planetarium/">Allen F. Blocher Planetarium</a> in Stevens Point, WI, the 
+								<a href="https://sdw.waukesha.k12.wi.us/o/planetarium">Horwitz-DeRemer Planetarium</a> in Waukesha, WI, the 
+								<a href="https://www.adlerplanetarium.org/">Adler Planetarium</a> in Chicago, IL, and has 
+								volunteered at the <a href="https://www.madison.k12.wi.us/planetarium">Madison Metropolitan School District Planetarium</a> in Madison, WI. On occasion, 
 								she has also volunteered with Geneva Lake Astrophysics and STEAM, running their portable dome for 
 								outreach events. In this time, Sarah has given many presentations and designed visuals with 
 								Digistar 6 software, which have been used at planetariums across the world. Please see samples 
@@ -637,6 +638,7 @@
 
 	</body>
 </html>
+
 
 
 
