--- a/index.html
+++ b/index.html
@@ -596,6 +596,9 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 							<p>
+							<img src="images/1000023601.jpg" style="max-width:100%; height:auto;">
+							</p>
+							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
 								Sarah began working in the planetarium industry in 2014 during her freshman year of college. 
 								Since then, she has worked at the <a href="https://www.uwsp.edu/smcpa/school-of-mathematics-computing-physics-and-astronomy/blocher-planetarium/">Allen F. Blocher Planetarium</a> in Stevens Point, WI, the 
@@ -638,6 +641,7 @@
 
 	</body>
 </html>
+
 
 
 
