--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
 								<a href="https://sdw.waukesha.k12.wi.us/o/planetarium">Horwitz-DeRemer Planetarium</a> in Waukesha, WI, the 
 								<a href="https://www.adlerplanetarium.org/">Adler Planetarium</a> in Chicago, IL, and has 
 								volunteered at the <a href="https://www.madison.k12.wi.us/planetarium">Madison Metropolitan School District Planetarium</a> in Madison, WI. On occasion, 
-								she has also volunteered with Geneva Lake Astrophysics and STEAM, running their portable dome for 
+								she has also volunteered with <a href="https://glaseducation.org/">Geneva Lake Astrophysics and STEAM</a>, running their portable dome for 
 								outreach events. In this time, Sarah has given many presentations and designed visuals with 
 								Digistar 6 software, which have been used at planetariums across the world. Please see samples 
 								of her work below.
@@ -645,6 +645,7 @@
 
 	</body>
 </html>
+
 
 
 
