--- a/index.html
+++ b/index.html
@@ -611,23 +611,23 @@
 								of her work below.
 							</p>
 							<p>
-								<video src="images/Adobe Express - Centennial (1).mp4" controls style="width: 100%; aspect-ratio: 1 / 1;"></video>
+								<video src="images/Adobe Express - Centennial (1).mp4" controls style="width: 100%;"></video>
   			
 								This visual was created in Digistar 6. It is a compilation of many pictures from planetarium100.org. Each picture is in a row, 
 								rotating around the dome in alternating directions. Three different pictures pop up at the front of the dome separately for 
 								better viewing, then return to their place in the rotation. 
 
-								<video src="images/Adobe Express - Snowflakes.mp4" controls style="width: 100%; aspect-ratio: 1 / 1;"></video>
+								<video src="images/Adobe Express - Snowflakes.mp4" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. It shows a wintery scene with reindeer and pine trees around the horizon. Snowflakes gently 
 								fall from the top of the dome.
 
-								<video src="images/Adobe Express - Fall Leaves.mp4" controls style="width: 100%; aspect-ratio: 1 / 1;"></video>
+								<video src="images/Adobe Express - Fall Leaves.mp4" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. It shows a spooky fall theme with jack-o-lanterns and bare trees around the horizon.  
 								As you look up to the Zenith, fall leaves of red, orange, and yellow fall from the sky.
 
-								<video src="images/Adobe Express - Lunar Occultation of Mars 2022.mp4" controls style="width: 100%; aspect-ratio: 1 / 1;"></video>
+								<video src="images/Adobe Express - Lunar Occultation of Mars 2022.mp4" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. The scene starts with the night sky on December 7, 2022. It shows the planet Mars disappearing
 								behind the moon in an astronomical event called a lunar occultation. Because this event is dependent on line-of-sight at various 
@@ -687,6 +687,7 @@
 
 	</body>
 </html>
+
 
 
 
