--- a/index.html
+++ b/index.html
@@ -611,22 +611,26 @@
 								of her work below.
 							</p>
 							<p>
+								<b>Centennial of Planetariums</b>
 								<video src="images/Adobe Express - Centennial (1).mp4" controls style="width: 100%;"></video>
   			
-								This visual was created in Digistar 6. It is a compilation of many pictures from planetarium100.org. Each picture is in a row, 
-								rotating around the dome in alternating directions. Three different pictures pop up at the front of the dome separately for 
-								better viewing, then return to their place in the rotation. 
+								This visual was created in Digistar 6. It is a compilation of many pictures from planetarium100.org and was made in celebration 
+								of the centennial of planetariums. Each picture is in a row, rotating around the dome in alternating directions. Three different 
+								pictures pop up at the front of the dome separately for better viewing, then return to their place in the rotation. 
 
+								<b>Snowfall Scene</b>
 								<video src="images/Adobe Express - Snowflakes.mp4" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. It shows a wintery scene with reindeer and pine trees around the horizon. Snowflakes gently 
 								fall from the top of the dome.
 
+								<b>Halloween Scene</b>
 								<video src="images/Adobe Express - Fall Leaves.mp4" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. It shows a spooky fall theme with jack-o-lanterns and bare trees around the horizon.  
 								As you look up to the Zenith, fall leaves of red, orange, and yellow fall from the sky.
 
+								<b>Lunar Occultation of Mars 2022</b>
 								<video src="images/Adobe Express - Lunar Occultation of Mars 2022.mp4" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. The scene starts with the night sky on December 7, 2022. It shows the planet Mars disappearing
@@ -687,6 +691,7 @@
 
 	</body>
 </html>
+
 
 
 
