--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 							<img src="images/1000023601.jpg" style="max-width:100%; height:auto;">
 							</p>
 							<p>
-							<img src="images/IMG_20221112_124230.jpg" style="max-width:100%; height:auto;">
+							<img src="images/IMG_20221112_124230.jpg" style="max-width:100% align='center'; height:auto;">
 							</p>
 							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
@@ -700,6 +700,7 @@
 
 	</body>
 </html>
+
 
 
 
