--- a/index.html
+++ b/index.html
@@ -596,10 +596,9 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 							<p>
-							<img src="images/1000023601.jpg" style="max-width:100%; height:auto;">
-							</p>
-							<p>
-							<img src="images/IMG_20221112_124230.jpg" style="max-width:100% align='center'; height:auto;">
+							<div>
+							 <img src="images/1000023601.jpg">
+							 <img src="mages/IMG_20221112_124230.jpg">
 							</p>
 							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
@@ -700,6 +699,7 @@
 
 	</body>
 </html>
+
 
 
 
