--- a/index.html
+++ b/index.html
@@ -596,9 +596,13 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 							<p>
-							<div>
-							 <img src="images/1000023601.jpg">
-							 <img src="mages/IMG_20221112_124230.jpg">
+							<div class="column">
+								<img src="images/1000023601.jpg">
+							</div>
+							<div class="column">
+								<img src="images/IMG_20221112_124230.jpg">
+							</div>
+							
 							</p>
 							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
@@ -699,6 +703,7 @@
 
 	</body>
 </html>
+
 
 
 
