--- a/index.html
+++ b/index.html
@@ -596,12 +596,8 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 							<p>
-							<div class="column">
-								<img src="images/1000023601.jpg">
-							</div>
-							<div class="column">
-								<img src="images/IMG_20221112_124230.jpg">
-							</div>
+							<img src="images/1000023601.jpg" alt="Image 1" style="width: 49%; display: inline-block;">
+							<img src="images/IMG_20221112_124230.jpg" alt="Image 2" style="width: 49%; display: inline-block;">
 							
 							</p>
 							<p>
