--- a/index.html
+++ b/index.html
@@ -596,8 +596,8 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 							<p>
-							<img src="images/1000023601.jpg" alt="Image 1" style="width: 49%; display: inline-block;">
-							<img src="images/IMG_20221112_124230.jpg" alt="Image 2" style="width: 49%; display: inline-block;">
+								<img src=”images/1000023601.jpg” style=”float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;”>
+								<img src=”images/IMG_20221112_124230.jpg” style=”float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;”>
 							
 							</p>
 							<p>
@@ -699,6 +699,7 @@
 
 	</body>
 </html>
+
 
 
 
