--- a/index.html
+++ b/index.html
@@ -598,6 +598,7 @@
 							<p>
 								<img src=”images/1000023601.jpg” style=”float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;”>
 								<img src=”images/IMG_20221112_124230.jpg” style=”float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;”>
+								<p style=”clear: both;”>
 							
 							</p>
 							<p>
@@ -699,6 +700,7 @@
 
 	</body>
 </html>
+
 
 
 
