--- a/index.html
+++ b/index.html
@@ -596,9 +596,20 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 							<p>
-								<img src=”images/1000023601.jpg” style=”float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;”>
-								<img src=”images/IMG_20221112_124230.jpg” style=”float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;”>
-								<p style=”clear: both;”>
+
+								<div class="image-container">
+								    <img src="images/1000023601.jpg" alt="Description of image 1">
+								    <img src="images/IMG_20221112_124230.jpg" alt="Description of image 2">
+								</div>
+								.container {
+								  display: flex;
+								  outline: 1px solid #000;
+								}
+								
+								.container img {
+								  flex-grow: calc(var(--w) / var(--h));
+								  width: 0;
+								}
 							
 							</p>
 							<p>
@@ -700,6 +711,7 @@
 
 	</body>
 </html>
+
 
 
 
