--- a/index.html
+++ b/index.html
@@ -598,18 +598,10 @@
 							<p>
 
 								<div class="image-container">
-								    <img src="images/1000023601.jpg" alt="Description of image 1">
-								    <img src="images/IMG_20221112_124230.jpg" alt="Description of image 2">
+								    <img src="images/1000023601.jpg" alt="Description of image 1" display: flex; flex-direction: row>
+								    <img src="images/IMG_20221112_124230.jpg" alt="Description of image 2" display: flex; flex-direction: row>
 								</div>
-								.container {
-								  display: flex;
-								  outline: 1px solid #000;
-								}
 								
-								.container img {
-								  flex-grow: calc(var(--w) / var(--h));
-								  width: 0;
-								}
 							
 							</p>
 							<p>
@@ -711,6 +703,7 @@
 
 	</body>
 </html>
+
 
 
 
