--- a/index.html
+++ b/index.html
@@ -598,8 +598,8 @@
 							<p>
 
 								<div class="image-container">
-								    <img src="images/1000023601.jpg" alt="Description of image 1" display: flex; flex-direction: row>
-								    <img src="images/IMG_20221112_124230.jpg" alt="Description of image 2" display: flex; flex-direction: row>
+								    <img src="images/1000023601.jpg" alt="Description of image 1" vertical-align: top; display: inline-block;>
+								    <img src="images/IMG_20221112_124230.jpg" alt="Description of image 2" vertical-align: top; display: inline-block;>
 								</div>
 								
 							
@@ -703,6 +703,7 @@
 
 	</body>
 </html>
+
 
 
 
