--- a/index.html
+++ b/index.html
@@ -596,13 +596,10 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 							<p>
-
-								<div class="image-container">
-								    <img src="images/1000023601.jpg" alt="Description of image 1" vertical-align: top; height:300px; display: inline-block;>
-								    <img src="images/IMG_20221112_124230.jpg" alt="Description of image 2" vertical-align: top; height:300px; display: inline-block;>
-								</div>
+								<img src=”images/1000023601.jpg” style=”float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;”>
+								<img src=”images/IMG_20221112_124230.jpg” style=”float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;”>
+								<p style=”clear: both;”>
 								
-							
 							</p>
 							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
@@ -703,6 +700,7 @@
 
 	</body>
 </html>
+
 
 
 
