--- a/index.html
+++ b/index.html
@@ -595,12 +595,11 @@
 						</article>
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
-							<p>
-								<img src=”images/1000023601.jpg” style=”float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;”>
-								<img src=”images/IMG_20221112_124230.jpg” style=”float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;”>
-								<p style=”clear: both;”>
-								
-							</p>
+							<div>
+							    <img src="images/1000023601.jpg" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+							    <img src="images/IMG_20221112_124230.jpg" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+							    <div style="clear: both;"></div>
+							</div>
 							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
 								Sarah began working in the planetarium industry in 2014 during her freshman year of college. 
@@ -700,6 +699,7 @@
 
 	</body>
 </html>
+
 
 
 
