--- a/index.html
+++ b/index.html
@@ -595,10 +595,10 @@
 						</article>
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
-							<div>
-							    <img src="images/1000023601.jpg" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
-							    <img src="images/IMG_20221112_124230.jpg" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
-							    <div style="clear: both;"></div>
+					
+							<div style="display: flex; gap: 1%; margin-bottom: 0.5em;">
+							    <img src="images/1000023601.jpg" style="height: 15em;">
+							    <img src="images/IMG_20221112_124230.jpg" style="height: 15em;">
 							</div>
 							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
@@ -699,6 +699,7 @@
 
 	</body>
 </html>
+
 
 
 
