--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 							</p>
 							<p>
 								<b>Centennial of Planetariums</b>
-								<video src="https://github.com/sarahparker2296/repo/releases/download/v1.0/CEN_Frame_0.mkv" controls style="width: 100%;"></video>
+								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/CEN_Frame_0.mkv" controls style="width: 100%;"></video>
   			
 								This visual was created in Digistar 6. It is a compilation of many pictures from planetarium100.org and was made in celebration 
 								of the centennial of planetariums. Each picture is in a row, rotating around the dome in alternating directions. Three different 
@@ -699,6 +699,7 @@
 
 	</body>
 </html>
+
 
 
 
