--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
 							<p>
 
 								<b>Snowfall Scene</b>
-								<video src="images/Adobe Express - Snowflakes.mp4" controls style="width: 100%;"></video>
+								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/SN_Frame_0.mkv" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. It shows a wintery scene with reindeer and pine trees around the horizon. Snowflakes gently 
 								fall from the top of the dome.
@@ -631,7 +631,7 @@
 							<p>
 
 								<b>Halloween Scene</b>
-								<video src="images/Adobe Express - Fall Leaves.mp4" controls style="width: 100%;"></video>
+								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/FLN_Frame_0.mkv" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. It shows a spooky fall theme with jack-o-lanterns and bare trees around the horizon.  
 								As you look up to the Zenith, fall leaves of red, orange, and yellow fall from the sky.
@@ -639,7 +639,7 @@
 							<p>
 
 								<b>Lunar Occultation of Mars 2022</b>
-								<video src="images/Adobe Express - Lunar Occultation of Mars 2022.mp4" controls style="width: 100%;"></video>
+								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/Mars_Frame_0.mkv" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. The scene starts with the night sky on December 7, 2022. It shows the planet Mars disappearing
 								behind the moon in an astronomical event called a lunar occultation. Because this event is dependent on line-of-sight at various 
@@ -699,6 +699,7 @@
 
 	</body>
 </html>
+
 
 
 
