--- a/index.html
+++ b/index.html
@@ -622,6 +622,19 @@
 							</p>
 							<p>
 
+								<b>Custom Light Pollution Generator</b>
+								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/LP.mp4" controls style="width: 100%;"></video>
+
+								This control was created in Digistar 6 and it is intended to be used by Digistar planetariums anywhere. This control panel allows you to adjust the light 
+								pollution you see at your location. For instance, in Waukesha, WI you may see light pollution in the West from Madison, WI and the East from Milwaukee, WI. 
+								Alternatively, on the lakeshore of Chicago, IL, you may just see light pollution stretching from North to South on the Western hemisphere of your sky, where
+								the city is, and complete darkness to the East, where Lake Michigan is. This generator allows you to change the number of cities contributing to the light 
+								pollution, the color, intensity, shape, and size of each city glow. You can also adjust the limiting magnitude and Milky Way intensity via sliders or a 
+								clickable Bortle scale. The final feature of this control panel includes a NYC panorama, which you can change to show your own local panorama.
+
+							</p>
+							<p>
+
 								<b>Snowfall Scene</b>
 								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/SN_Frame_0.mkv" controls style="width: 100%;"></video>
 
@@ -639,7 +652,7 @@
 							<p>
 
 								<b>Lunar Occultation of Mars 2022</b>
-								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/Mars_Frame_0.mkv" controls style="width: 100%;"></video>
+								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/Occultation.mp4" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. The scene starts with the night sky on December 7, 2022. It shows the planet Mars disappearing
 								behind the moon in an astronomical event called a lunar occultation. Because this event is dependent on line-of-sight at various 
@@ -648,6 +661,7 @@
 								Mars disappears behind the Moon. The scene then returns to the current date and time.
 
 							</p>
+							
 
 
 							
@@ -699,6 +713,7 @@
 
 	</body>
 </html>
+
 
 
 
