--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<a href="#blog" >Blog</a>
 								</li>
 								<li>
-									<a href="#portfolio" >Portfolio</a>
+									<a href="#portfolio" >Planetarian Portfolio</a>
 								</li>
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
@@ -713,6 +713,7 @@
 
 	</body>
 </html>
+
 
 
 
