--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@
 							<h2 class="major">Planetarian Portfolio</h2>
 					
 							<div style="display: flex; gap: 1%; margin-bottom: 0.5em;">
-							    <img src="images/1000023601.jpg" style="height: 15em;">
-							    <img src="images/IMG_20221112_124230.jpg" style="height: 15em;">
+							    <img src="images/1000023601.jpg" style="height: min(15em, 40vh); width: auto;">
+							    <img src="images/IMG_20221112_124230.jpg" style="height: min(15em, 40vh); width: auto;">
 							</div>
 							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
@@ -713,6 +713,7 @@
 
 	</body>
 </html>
+
 
 
 
