--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 							</p>
 							<p>
 								<b>Centennial of Planetariums</b>
-								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/CEN_Frame_0.mkv" controls style="width: 100%;"></video>
+								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/CEN_Frame_0.mp4" controls style="width: 100%;"></video>
   			
 								This visual was created in Digistar 6. It is a compilation of many pictures from planetarium100.org and was made in celebration 
 								of the centennial of planetariums. Each picture is in a row, rotating around the dome in alternating directions. Three different 
@@ -636,7 +636,7 @@
 							<p>
 
 								<b>Snowfall Scene</b>
-								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/SN_Frame_0.mkv" controls style="width: 100%;"></video>
+								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/SN_Frame_0.mp4" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. It shows a wintery scene with reindeer and pine trees around the horizon. Snowflakes gently 
 								fall from the top of the dome.
@@ -644,7 +644,7 @@
 							<p>
 
 								<b>Halloween Scene</b>
-								<video src="images/FL_Frame_0.mp4" controls style="width: 100%;"></video>
+								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/FL_Frame_0.mp4" controls style="width: 100%;"></video>
 
 								This visual was created in Digistar 6. It shows a spooky fall theme with jack-o-lanterns and bare trees around the horizon.  
 								As you look up to the Zenith, fall leaves of red, orange, and yellow fall from the sky.
@@ -713,6 +713,7 @@
 
 	</body>
 </html>
+
 
 
 
